# shadowseed-pro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_REPORT.md  README.md  SECURITY.md  pyproject.toml  repository-authority.yaml  shadowseed-rebuilt-v0.3.0.bundle
.github/: ci-trigger.txt
archive/: README.md  source-repo-audit.json
benchmarks/: README.md  pipeline.md  register.md
examples/: local_absencebench_sample.json
experiments/: run_full.py
results/: README.md
scripts/: align_gate_docs_once.py  analyze_acceptance_vs_density.py  analyze_rubric_sensitivity.py  answer_pair_winrate.py  build_blind_control_packets.py  human_review_control.py  make_blind_ab_review.py  prescreen_open_set_output.py  run_absencebench.py  run_benchmark.py  verify_absencebench.py
templates/: README.md  review_form_template.csv  run_log_template.csv
tests/: test_absencebench_runner.py  test_activation_probe.py  test_adversarial_gate_benchmark.py  test_adversarial_payoff_suite.py  test_agent_safety_contract.py  test_answer_pair_winrate.py  test_artifact_snapshot.py  test_atomic_seed_rules.py  test_atomic_seed_validation.py  test_authority_encapsulation.py  test_bad_seed_dies_out.py  test_benchmark_results.py  test_benefit_suite.py  test_blind_benchmark.py  test_blind_control_packets.py  test_cli_parser.py  test_cli_route_integration.py  test_cli_smoke.py  test_compatibility_contracts.py  test_contradiction_lifecycle.py  test_dialectic_falsification.py  test_embedding_backends.py  test_execution_logic.py  test_false_positive_suite.py  test_gate_contracts.py  test_gate_path_unification.py  test_gate_signal_routing.py  test_generative_payoff_suite.py  test_generative_seed_variant.py  test_hash_utils.py  test_host_verification.py  (+43 more)
(+467 files in other folders)
